<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".application.pacient.AddPacientActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_id">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_id"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_name">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_name"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_surname">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_surname"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_cnp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_age">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_cnp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_birthday"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_dateIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_cnp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_cnp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_dateIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_cnp"
            app:layout_constraintBottom_toTopOf="@id/til_add_pacient_dateEx"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_dateIn">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_dateIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_add_pacient_dateEx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_dateIn"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit_pacient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_dateEx">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_add_pacient_dateEx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:longClickable="false"
                android:focusable="false"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_submit_pacient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_submit"
            app:layout_constraintTop_toBottomOf="@id/til_add_pacient_dateEx"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</android.support.constraint.ConstraintLayout>