<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/black">
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/tv_update_drug"
              android:text="@string/label_update_drug"
              android:textSize="@dimen/medium_text"
              android:textColor="@color/accent_material_light"
              android:fontFamily="@font/aller_bdit"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/et_update_drug"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/et_update_drug"
              app:layout_constraintTop_toBottomOf="@id/tv_update_drug"
              app:layout_constraintBottom_toTopOf="@+id/btn_update_drug"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:background="@drawable/rounded_text"
              android:textSize="15sp"
              android:hint="@string/new_cantity"
              android:inputType="textCapWords|textNoSuggestions"
              android:padding="5dp"
    />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/btn_update_drug"
            app:layout_constraintTop_toBottomOf="@id/et_update_drug"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
    />

</android.support.constraint.ConstraintLayout>