<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".application.pacient.file.AddPacientFileActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_addFile_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_addFile_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_id">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_addFile_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_addFile_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_addFile_id"
            app:layout_constraintBottom_toTopOf="@id/btn_submit_file"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_content">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_addFile_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:lines="4"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btn_submit_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_submit"
            app:layout_constraintTop_toBottomOf="@id/til_addFile_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</android.support.constraint.ConstraintLayout>