<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".application.request.AddRequestActivity">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_addRequest_drug_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/til_addRequest_cantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_drug_name">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_addRequest_drug_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/til_addRequest_cantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/til_addRequest_drug_name"
                app:layout_constraintBottom_toTopOf="@+id/btn_submit_request"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_cantity">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_addRequest_cantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btn_submit_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_submit"
                app:layout_constraintTop_toBottomOf="@id/til_addRequest_cantity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </android.support.constraint.ConstraintLayout>
</ScrollView>