<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             tools:context=".application.agenda.AgendaListFragment">

    <LinearLayout
            android:id="@+id/searchbar_event_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recyclerViewAgendaList"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal" app:layout_constraintHorizontal_bias="0.0">

        <EditText
                android:id="@+id/et_search_event"
                android:textSize="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_text"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/search"
                android:hint="@string/search_event"
                android:inputType="textCapWords|textNoSuggestions"
                android:padding="5dp"/>

        <Button
                android:id="@+id/search_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/search"
                android:textColor="@color/white"/>

        <Button
                android:id="@+id/cancel_search_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/all_cancel"
                android:textColor="@color/white"/>

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/searchbar_event_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recyclerViewAgendaList"
    />

</android.support.constraint.ConstraintLayout>