<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".application.signUp.SignUpActivity">
    <ImageView
            android:id="@+id/img_contact"
            android:layout_width="@dimen/img_contact_dimension"
            android:layout_height="@dimen/img_contact_dimension"
            android:src="@drawable/contact"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/til_signUp_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signUp_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_contact"
            app:layout_constraintBottom_toTopOf="@id/til_signUp_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_username">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signUp_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signUp_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_signUp_username"
            app:layout_constraintBottom_toBottomOf="@id/til_signUp_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_name">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signUp_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signUp_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_signUp_name"
            app:layout_constraintBottom_toTopOf="@id/spinner_signUp_role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_surname">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signUp_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signUp_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_signUp_surname"
            app:layout_constraintBottom_toTopOf="@+id/til_signUp_re_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signUp_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_signUp_re_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/til_signUp_password"
            app:layout_constraintBottom_toTopOf="@+id/spinner_signUp_role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_signUp_re_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
            android:id="@+id/spinner_signUp_role"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:entries="@array/gender_array"
            android:popupBackground="@color/colorSpinner"
            app:layout_constraintTop_toBottomOf="@id/til_signUp_surname"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1">
    </Spinner>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            app:layout_constraintTop_toBottomOf="@id/spinner_signUp_role"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

</android.support.constraint.ConstraintLayout>